--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Get up-to-date weather forecasts and information for your location on MyWeatherSite." />
+    <meta name="keywords" content="weather, forecast, temperature, humidity, precipitation" />
+    <meta name="robots" content="index, follow">
+   <title>Weather Forecast - MyWeatherSite</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
